--- a/FrontEnd/styles/style_profile.css
+++ b/FrontEnd/styles/style_profile.css
@@ -49,7 +49,8 @@ nav {
 }
 
 .right-section button:hover {
-    background-color: rgb(87, 224, 239); /* Cambio de color al pasar el cursor */
+    height: 30px;
+    background-color: rgba(255, 255, 255, 0.3); /* Cambio de color al pasar el cursor */
 }
 
 .right-section button img {
